# RTOS-Edge-Infrence

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  sdkconfig  sdkconfig.old
.github/workflows/: firmware-build.yml  jetson-smoke-test.yml
CI Pipeline Code/: CI Pipeline SetUp.md  run_ci_test.sh  smoke_test.py
Jetson Code/Code/: BLE.py  Display.py  ML.py  config_sample.py  main.py
Jetson Code/Docker/: README.md  dockerrun  entrypoint.sh  readme.txt  systemd
ML Notebook/: Collecting Data .ipynb  Spotify Notebook.ipynb  Testing video stream.ipynb  Training notebook.ipynb
firmware/: AP.c  AP.h  CMakeLists.txt  README.md  cam.c  cam.h  configs.h  macros.h  main.c
jetson/: BLE.py  Display.py  ML.py  README.md  config_sample.py  main.py
main/: AP.c  AP.h  CMakeLists.txt  cam.c  cam.h  idf_component.yml  macros.h  main.c  sample_config.h
